--- a/css/map-clip.css
+++ b/css/map-clip.css
@@ -1,18 +1,25 @@
 /* The map clip */
 
+@media screen and (max-width: 599px) {
+	.l-map-clip__container {
+		/*display: none;*/
+	}
+}
+
 .c-map-clip__container {
-	--size: 350px;
+	--size: 400px;
 	width: var(--size);
-	height: var(--size);
+	max-width: 100%;
 }
 
 .l-map-clip {
 	position: relative;
+	width: 100%;
+	height: 0;
+	padding-top: 100%; /* must be used within a container; keep the aspect ratio */
 }
 
 .c-map-clip {
-	width: 100%;
-	height: 100%;
 	clip-path: circle(50%);
 }
 
