--- a/css/reset.css
+++ b/css/reset.css
@@ -2,7 +2,11 @@
 	margin: 0;
 	padding: 0;
 	font-weight: 300;
-	line-height: 1.5;
+}
+
+body {
+	max-width: 100vw;
+	overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
